--- a/SellSnap/Base.lproj/Main.storyboard
+++ b/SellSnap/Base.lproj/Main.storyboard
@@ -8,11 +8,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Galano Grotesque Bold.otf">
-            <string>GalanoGrotesque-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
@@ -29,13 +24,13 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MUo-Vk-moP" customClass="BackgroundVideo" customModule="SwiftVideoBackground">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SALESNAP" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPb-QK-wb4">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SALESNAP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPb-QK-wb4">
                                         <rect key="frame" x="136" y="53" width="191" height="43"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="191" id="B1m-cC-zfJ"/>
                                             <constraint firstAttribute="height" constant="43" id="rtp-oE-5Xa"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="GalanoGrotesque-Bold" family="GalanoGrotesque-Bold" pointSize="34"/>
+                                        <fontDescription key="fontDescription" name="Arial-Black" family="Arial Black" pointSize="34"/>
                                         <color key="textColor" red="0.29656940698623657" green="0.79584962129592896" blue="0.64064943790435791" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -166,7 +161,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Deb-lT-sAN">
                                 <rect key="frame" x="320" y="19" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="ok_blue"/>
+                                <state key="normal" image="ok_logo"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -178,7 +173,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="mapObject" destination="bsD-y3-OBN" id="wdN-h7-y0J"/>
+                        <outlet property="map" destination="bsD-y3-OBN" id="Lam-op-6hH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y6q-8X-4Qh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -190,6 +185,6 @@
         <image name="cancel" width="32" height="32"/>
         <image name="fill3" width="14" height="30"/>
         <image name="google_logo1600" width="1600" height="1600"/>
-        <image name="ok_blue" width="32" height="32"/>
+        <image name="ok_logo" width="32" height="32"/>
     </resources>
 </document>
