--- a/SellSnap/Base.lproj/Main.storyboard
+++ b/SellSnap/Base.lproj/Main.storyboard
@@ -144,7 +144,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="332"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Ox-3Q-J2e" id="6Qp-yh-BHN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="332"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="331.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yourLossBabe" translatesAutoresizingMaskIntoConstraints="NO" id="DRu-28-JeU">
@@ -238,7 +238,7 @@
                     <navigationItem key="navigationItem" id="SFl-nv-KHv">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="tQ2-bm-iY9">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hQc-ai-Qli">
-                                <rect key="frame" x="58" y="6" width="86" height="32"/>
+                                <rect key="frame" x="16" y="6" width="86" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="cancel"/>
                             </button>
@@ -259,10 +259,101 @@
             </objects>
             <point key="canvasLocation" x="724" y="108.39580209895054"/>
         </scene>
+        <!--Product DetailsVC-->
+        <scene sceneID="4q9-sR-PiS">
+            <objects>
+                <tableViewController storyboardIdentifier="ProductDetails" id="q7C-Yc-L2F" customClass="ProductDetailsVC" customModule="SellSnap" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lGY-Kx-9l2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection headerTitle="" id="SoT-QX-2it">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="211" id="uC8-oO-XnS">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uC8-oO-XnS" id="fZ5-3v-57z">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="210.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wbF-80-Dfl" customClass="ImageSlideshow" customModule="ImageSlideshow">
+                                                    <rect key="frame" x="8" y="23" width="359" height="188"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="w23-Cz-765">
+                                        <rect key="frame" x="0.0" y="211" width="375" height="83"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="w23-Cz-765" id="Lfs-0n-ESy">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="82.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhJ-4w-pO3">
+                                                    <rect key="frame" x="8" y="6" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" image="down"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z0b-Ng-jaM">
+                                                    <rect key="frame" x="297" y="6" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" image="like"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BUC-I1-UIU">
+                                                    <rect key="frame" x="145" y="26" width="84" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <state key="normal" title="Reserve"/>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Rbf-0S-dk6">
+                                        <rect key="frame" x="0.0" y="294" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rbf-0S-dk6" id="c1n-OM-nbx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="POP.SEE.CULL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tgi-Fh-dIn">
+                                                    <rect key="frame" x="8" y="8" width="113" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Loss T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="znD-oe-jLP">
+                                                    <rect key="frame" x="8" y="30" width="119" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.61394434439384893" green="0.62002300126903553" blue="0.62002300126903553" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="q7C-Yc-L2F" id="Q94-GQ-lHH"/>
+                            <outlet property="delegate" destination="q7C-Yc-L2F" id="RHv-rP-ZOP"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="imageSlideShow" destination="wbF-80-Dfl" id="U8F-46-tuU"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uh6-AC-8qu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="724" y="-591.45427286356824"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="IfQ-Gi-7qJ">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="U42-Q1-baj" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="sv7-Oh-4qr" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qaz-xr-s9R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -272,6 +363,7 @@
                         <segue destination="SzY-Ck-h02" kind="relationship" relationship="rootViewController" id="7Ph-bu-2He"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U42-Q1-baj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-229" y="109"/>
         </scene>
@@ -320,9 +412,11 @@
     </scenes>
     <resources>
         <image name="cancel" width="32" height="32"/>
+        <image name="down" width="94" height="95"/>
         <image name="fill3" width="14" height="30"/>
         <image name="filter" width="21" height="25"/>
         <image name="google_logo1600" width="1600" height="1600"/>
+        <image name="like" width="70" height="70"/>
         <image name="main_logo" width="200" height="200"/>
         <image name="map" width="34" height="33"/>
         <image name="ok_logo" width="32" height="32"/>
